--- a/config/sync/core.entity_form_display.node.news.default.yml
+++ b/config/sync/core.entity_form_display.node.news.default.yml
@@ -1,25 +1,45 @@
-uuid: 80f0d49f-3811-4bf5-a684-8fd7703ffe34
+uuid: 50b5bbdd-f2a1-4c8c-af48-6b74926b3f29
 langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.landing_page.layout_builder__layout
-    - node.type.landing_page
+    - field.field.node.news.body
+    - field.field.node.news.field_tags
+    - node.type.news
   module:
     - path
-_core:
-  default_config_hash: 1imzFcdW38T5DdEFom0GpytHRhDhL1EvGPbt75kqmoc
-id: node.landing_page.default
+    - text
+id: node.news.default
 targetEntityType: node
-bundle: landing_page
+bundle: news
 mode: default
 content:
+  body:
+    type: text_textarea_with_summary
+    weight: 121
+    settings:
+      rows: 9
+      summary_rows: 3
+      placeholder: ''
+      show_summary: false
+    third_party_settings: {  }
+    region: content
   created:
     type: datetime_timestamp
     weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_tags:
+    weight: 122
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
   path:
     type: path
     weight: 30
@@ -65,5 +85,4 @@ content:
       match_limit: 10
     region: content
     third_party_settings: {  }
-hidden:
-  layout_builder__layout: true
+hidden: {  }
