--- a/config/sync/core.entity_view_display.node.news.teaser.yml
+++ b/config/sync/core.entity_view_display.node.news.teaser.yml
@@ -5,6 +5,11 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.news.body
+    - field.field.node.news.field_author
+    - field.field.node.news.field_category
+    - field.field.node.news.field_date
+    - field.field.node.news.field_image
+    - field.field.node.news.field_source
     - field.field.node.news.field_tags
     - node.type.news
   module:
@@ -29,4 +34,9 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
+  field_author: true
+  field_category: true
+  field_date: true
+  field_image: true
+  field_source: true
   field_tags: true
