Added new config

--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
     "drupal/google_analytics": "^3.1",
     "drupal/honeypot": "^2.0",
     "drupal/image_style_quality": "^1.4",
+    "drupal/layout_builder_at": "^2.12",
     "drupal/layout_builder_browser": "^1.1",
     "drupal/layout_builder_iframe_modal": "^1.0",
     "drupal/media_entity_facebook": "^3.0@beta",
